--- a/async/backend.html
+++ b/async/backend.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -22,4 +22,4 @@
         localStorage.setItem("images",JSON.stringify(images));
         document.getElementById("url").value=null;
     }
-</script>
+</script> -->
